istio/Gateway/1-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: istio-system
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # Implementação padrão do Istio
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  # #teste
  # - port:
  #     number: 80
  #     name: http-api-graphql
  #     protocol: HTTP
  #   hosts:
  #   - "*"
