istio/Gateway/2-virtual-service copy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: on-premise
  name: web-app
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
    - route:
      - destination:
          host: destination-web-app
          port:
            number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-web-app
  namespace: on-premise
spec:
  host: service-web-app.on-premise.svc.cluster.local
  # subsets:
  #   - labels:
  #       version: original
  #     name: original
  #   - labels:
  #       version: experimental
  #     name: experimental
