istio/Gateway/2-virtual-service-graphql-and-web-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: istio-system
  name: vs-ingress-gateway
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration.istio-system.svc.cluster.local
  http:
    - match:
      - uri:
          prefix: /graphql
      route:
      - destination:
          port:
            number: 4005
          host: service-api-graphql.on-premise.svc.cluster.local
        weight: 100
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 3000
          host: service-web-app.on-premise.svc.cluster.local
        weight: 100
