istio/Gateway/2-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: on-premise
  name: vs-web-app
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /graphql
  
    route:
    - destination:
        port:
          number: 4005
        host: service-api-graphql


  - match:
    # - uri:
    #     prefix: /
    - port: 80
    route:
    - destination:
        port:
          number: 3000
        host: service-web-app
