istio/Gateway/3-virtual-service-web-app.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: on-premise
  name: vs-web-app
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration.istio-system.svc.cluster.local
  http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          port:
            number: 3000
          host: service-web-app
